--- a/src/components/header/style.module.css
+++ b/src/components/header/style.module.css
@@ -1,11 +1,14 @@
 .header {
-  background-color: var(--marrom-claro);
+  background-color: #0f0f0fa5;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
-  position: relative;
+  padding: 2rem 2rem;
+  position: fixed;
   z-index: 10;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 .logo {
