--- a/src/components/footer/style.module.css
+++ b/src/components/footer/style.module.css
@@ -3,9 +3,24 @@
     justify-content: center;
     background-color: var(--marrom-claro);
     align-items: center;
-    padding: 2rem 2rem;
+    padding: 0.6rem 2rem;
     gap: 2.5rem;
+    font-weight: 600;
+    font-size: smaller;
+    font-family: sans-serif;
 }
 img {
-    height: 60px;
+    height: 6rem;
+}
+.footer div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+}
+.footer .Contatodiv {
+    display: flex;
+    flex-direction: row;
+}
+.footer .p {
+    min-width: max-content;
 }
