--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,10 @@
   --verde-salvia: #a3b18a;
   --bege-escuro: #7f675b;
   --branco-puro: #ffffff;
+  --creme-escuro: #D9C7A3;
+  --bege-vintage: #CBB693;
+  --cinza-aço: #555759;
+  --preto-intenso: #0F0F0F;
+  --vermelho-clássico: #B22222;
+  --azul-royal-escuro: #0A3D62;
 }
