--- a/src/pages/agendamento/style.module.css
+++ b/src/pages/agendamento/style.module.css
@@ -109,18 +109,19 @@
 }
 
 .modalContent {
-  background-color: rgba(255, 255, 255, 0);
-  padding: 0; 
-  width: auto; 
+  background-color: white;
+  padding: 20px;
+  width: fit-content;
+  max-width: 100%;
   height: auto;
-  max-width: none;
   max-height: none;
-  overflow: visible; 
+  overflow: visible;
   text-align: center;
-  display: inline-block;
   display: flex;
   flex-direction: column;
   gap: 30px;
+  border-radius: 12px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.3);
 }
 
 .button {
@@ -212,4 +213,52 @@
   .modalOverlay {
     padding: 0;      
   }
+}
+
+
+.modalOverlay2 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2000; 
+}
+
+.modalContent2 {
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  min-width: 300px;
+  max-width: 90%;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  z-index: 2100;
+}
+
+.modalContent2 button {
+  all: unset;  
+  padding: 10px 20px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: bold;
+  display: flex;
+  flex-direction: center;
+}
+
+.modalContent2 button:first-child {
+  background-color: #4caf50;
+  color: white;
+}
+
+.modalContent2 button:last-child {
+  background-color: #f44336;
+  color: white;
 }
