Add framer-motion dependency and update Home component layout
- Added framer-motion to package.json and package-lock.json
- Imported IHome image in Home.tsx and updated layout to include it
- Added styling for IHome image in style.module.css

--- a/src/pages/home/style.module.css
+++ b/src/pages/home/style.module.css
@@ -4,6 +4,10 @@
     padding-left: 32px;
     padding-right:32px ;
 }
+.IHome {
+    height: 10rem;
+    width: 10rem;
+}
 .Home{
     display: flex;
     flex-direction:column ;
