--- a/src/pages/cadastro/style.module.css
+++ b/src/pages/cadastro/style.module.css
@@ -22,12 +22,11 @@
 }
 .logo {
     position: absolute;
-    left: 35%;
-    top: -4rem;
+    left: 38%;
+    top: -1em;
 }
 .Logo {
   width: 8rem;
-  height: auto;
 }
 .title {
     position: relative;
@@ -36,7 +35,7 @@
   font-weight: 600;
   text-align: center;
   margin-bottom: 10px;
-  top: 1.7rem;
+  top: 2rem;
 }
 
 /* Campos de input */
@@ -107,11 +106,11 @@ button:hover {
   color: #ffcc70;
 }
 
-.span {
+/* .span {
   display: block;
   margin-top: 10px;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
-}
+} */
 
 /* Animação suave */
 @keyframes fadeIn {
@@ -123,4 +122,30 @@ button:hover {
     opacity: 1;
     transform: translateY(0);
   }
+}
+@media (max-width: 600px) {
+  .form {
+  padding: 20px;
+  width: 100%;
+  max-width: 300px;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  animation: fadeIn 0.6s ease-in-out;
+}
+.logo {
+    position: absolute;
+    left: 34%;
+    top: -1em;
+}
+.Logo {
+  width: 6rem;
+}
+.title {
+    position: relative;
+  color: #fff;
+  font-size: 24px;
+  top: 2rem;
+}
 }
