--- a/src/pages/login/style.module.css
+++ b/src/pages/login/style.module.css
@@ -23,11 +23,11 @@
 .logo {
     position: absolute;
     left: 35%;
-    top: -4rem;
+    top: -3rem;
 }
 .Logo {
   width: 8rem;
-  height: auto;
+  
 }
 .title {
     position: relative;
@@ -38,7 +38,9 @@
   margin-bottom: 10px;
   top: 1.7rem;
 }
-
+img{
+  height: 8rem;
+}
 /* Campos de input */
 fieldset {
   border: none;
@@ -107,12 +109,6 @@ button:hover {
   color: #ffcc70;
 }
 
-.span {
-  display: block;
-  margin-top: 10px;
-  border-top: 1px solid rgba(255, 255, 255, 0.2);
-}
-
 /* Animação suave */
 @keyframes fadeIn {
   from {
@@ -123,4 +119,32 @@ button:hover {
     opacity: 1;
     transform: translateY(0);
   }
+}
+@media (max-width: 600px) {
+  .form {
+  padding: 20px;
+  width: 100%;
+  max-width: 300px;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  animation: fadeIn 0.6s ease-in-out;
+}
+.logo {
+    left: 34%;
+    top: -3em;
+}
+.Logo {
+  width: 6rem;
+}
+.title {
+    position: relative;
+  color: #fff;
+  font-size: 24px;
+  top: 2rem;
+}
+img{
+  height: 6rem;
+}
 }
