--- a/src/pages/cadastro/style.module.css
+++ b/src/pages/cadastro/style.module.css
@@ -74,7 +74,7 @@ input:focus {
 
 /* Botão */
 button {
-  margin-top: 10px;
+  margin-top: 0px;
   padding: 12px;
   background: linear-gradient(90deg, #6a11cb, #2575fc);
   border: none;
@@ -147,5 +147,9 @@ button:hover {
   color: #fff;
   font-size: 24px;
   top: 2rem;
+}
+button{
+  padding: 10px;
+  border-radius: 20px;
 }
 }
