--- a/src/pages/funcionarios/style.module.css
+++ b/src/pages/funcionarios/style.module.css
@@ -66,7 +66,9 @@
   white-space: nowrap;
   width: 80%;
 }
-
+.botaoPesquisa{
+  min-width: 10px;
+}
 .botaoPesquisa:hover {
   background-color: #2563eb;
 }
@@ -376,19 +378,13 @@
 
 
 
-@media (max-width: 360px) {
-  .modalContent2 {
-    min-width: 90%;
-    padding: 20px;
-    border-radius: 8px;
-  }
-}
+
 
 
 @media (max-width: 860px) {
   .containerPrincipal {
     flex-direction: column;
-    width: 90%;
+    width: 78%;
     padding: 1rem;
   }
 
@@ -397,6 +393,7 @@
   .botaoPesquisa {
     flex: 1 1 100%;
     width: 90%;
+    font-size: 0.9rem;
   }
 
   .containerCartoes {
@@ -407,7 +404,7 @@
   .cartaoCliente {
     flex-direction: column;
     align-items: flex-start;
-    width: 100%;
+    width: 82%;
     padding: 12px 16px;
     gap: 12px;
   }
@@ -423,7 +420,15 @@
   }
 
   .botaoNavegacao {
-    width: 100%;
+    
     text-align: center;
+  }
+  
+}
+@media (max-width: 360px) {
+  .modalContent2 {
+    min-width: 90%;
+    padding: 20px;
+    border-radius: 8px;
   }
 }
