--- a/src/pages/servicos/style.module.css
+++ b/src/pages/servicos/style.module.css
@@ -47,7 +47,7 @@
     justify-content: flex-start; /* texto no topo */
     align-items: center;
     padding: 16px;
-    height: 450px;
+    min-height: 450px;
     border-radius: 20px;
     position: relative;
     overflow: hidden;
@@ -79,22 +79,28 @@
     text-shadow: 2px 2px 6px rgba(0,0,0,0.8);
 }
 
-
-@media (max-width: 600px){
+@media (max-width: 862px){
     .tudo {
         flex-direction: column;
+        align-items: center;
     }
     .tudo >div {
-        width: 100%;
+        width: 80%;
     }
     .servicos{
         padding: 24px;
     }
     .pacote{
-        height: 254px;
+        min-height: 254px;
     }
     .tudo p {
         font-size: 0.9rem;
     }
     
+}
+
+@media (max-width: 400px){
+    .tudo >div{
+        width: 100%;
+    }
 }
